# fastapi-rkllama

./: .pre-commit-config.yaml  Dockerfile  README.md  api_model_tests.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  server.py  server.sh  setup.sh  streaming_api_response_tests.py  test_model_fixtures.py  test_ollama_api.py  test_server.http
.github/workflows/: docker-publish.yml
converter/src/: rkllm.py
src/: process.py
