[project]
name = "fastapi-rkllama"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "huggingface-hub>=0.34.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "transformers>=4.55.4",
    "uvicorn>=0.35.0",
]
